@@ -12,6 +12,8 @@ with the original 1.9.0 release.
 
 * (bug 3000) Fall back to SCRIPT_NAME plus QUERY_STRING when REQUEST_URI is
   not available, as on IIS with PHP-CGI
+* Security fix for DjVu images. (Only affects servers where .djvu file
+  uploads are enabled and $wgDjvuToXML is set.)
 
 
 == MediaWiki 1.9 ==
